chore: Swagger API 정렬 기준 method -> alpha

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -78,5 +78,5 @@ springdoc:
   swagger-ui:
     path: /swagger-ui.html
     display-request-duration: true
-    operations-sorter: method
+    operations-sorter: alpha
     tags-sorter: alpha
