--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,14 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:13306/study_with_me?autoReconnect=true&serverTimeZone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/study_with_me?autoReconnect=true&serverTimeZone=Asia/Seoul
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-  sql:
-    init:
-      mode: ALWAYS
-      schema-locations: classpath:/db/schema.sql
-      data-locations: classpath:/db/data.sql
-
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
