refactor: `StudyWeekly` 코드 컨벤션에 따른 리팩토링 & REST Docs 문서 수정

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ out/
 !**/src/test/**/out/
 
 ### RestDocs index.html ###
-src/docs/asciidoc/*.html
+src/docs/asciidoc/**/*.html
 src/main/resources/static/docs
 
 ### NetBeans ###
