chore: Flyway 의존성 추가

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ out/
 src/docs/asciidoc/**/*.html
 src/main/resources/static/docs
 
+### Docker MySQL Meta Data ###
+mysql_data
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
