--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
 version: "3"
 services:
   database:
-    image: mysql:8.0.27
+    image: mysql:8.0.33
     container_name: mysql_container
     ports:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: "1234"
       MYSQL_DATABASE: "study_with_me"
+    volumes:
+      - "./mysql_data:/var/lib/mysql" # .idb = Table Data / .frm = Table Definition / ...
+      - "./src/main/resources/sql/init.sql:/docker-entrypoint-initdb.d/init.sql:ro" # Init Script
