--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,8 +18,9 @@ spring:
       ddl-auto: validate
     properties:
       hibernate:
-        show_sql: true
+        show_sql: false
         format_sql: true
+        highlight_sql: true
         default_batch_fetch_size: 50
 
   thymeleaf:
@@ -81,3 +82,12 @@ springdoc:
     display-request-duration: true
     operations-sorter: alpha
     tags-sorter: alpha
+
+logging:
+  level:
+    org.springframework.core:
+      LocalVariableTableParameterNameDiscoverer: error
+    org.hibernate:
+      SQL: DEBUG
+      type.descriptor.sql: TRACE
+      orm.jdbc.bind: TRACE
