--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
+    driver-class-name: ${RDS_DRIVER}
     url: ${RDS_URL}
     username: ${RDS_USERNAME}
     password: ${RDS_PASSWORD}
-    driver-class-name: ${RDS_DRIVER}
 
   jpa:
     open-in-view: false
@@ -11,8 +11,9 @@ spring:
       ddl-auto: validate
     properties:
       hibernate:
-        show_sql: true
+        show_sql: false
         format_sql: true
+        highlight_sql: true
         default_batch_fetch_size: 50
 
   thymeleaf:
@@ -67,3 +68,12 @@ cloud:
 slack:
   webhook:
     url: ${SLACK_WEBHOOK_URL}
+
+logging:
+  level:
+    org.springframework.core:
+      LocalVariableTableParameterNameDiscoverer: error
+    org.hibernate:
+      SQL: DEBUG
+      type.descriptor.sql: TRACE
+      orm.jdbc.bind: TRACE
