--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,26 @@
 spring:
   datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/study_with_me?autoReconnect=true&serverTimeZone=Asia/Seoul
     username: root
     password: 1234
-    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  flyway:
+    enabled: true
+    encoding: UTF-8
+    baseline-on-migrate: true
+    baseline-version: 1
+    locations: classpath:db/migration
 
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     properties:
       hibernate:
-        show_sql: true
+        show_sql: false
         format_sql: true
+        highlight_sql: true
         default_batch_fetch_size: 50
 
   thymeleaf:
@@ -74,3 +82,12 @@ springdoc:
     display-request-duration: true
     operations-sorter: alpha
     tags-sorter: alpha
+
+logging:
+  level:
+    org.springframework.core:
+      LocalVariableTableParameterNameDiscoverer: error
+    org.hibernate:
+      SQL: DEBUG
+      type.descriptor.sql: TRACE
+      orm.jdbc.bind: TRACE
