--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,18 +1,14 @@
 spring:
-  datasource:
-    url: jdbc:h2:mem:test;MODE=MYSQL;
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
         show_sql: false
         format_sql: true
+        highlight_sql: true
         default_batch_fetch_size: 50
 
   thymeleaf:
@@ -70,10 +66,9 @@ slack:
 
 logging:
   level:
-    org:
-      hibernate:
-        SQL: DEBUG
-        type:
-          descriptor:
-            sql:
-              BasicBinder: TRACE
+    org.springframework.core:
+      LocalVariableTableParameterNameDiscoverer: error
+    org.hibernate:
+      SQL: DEBUG
+      type.descriptor.sql: TRACE
+      orm.jdbc.bind: TRACE
