feat: DB Query 로깅 p6spy 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,9 @@ dependencies {
     // Guava
     implementation 'com.google.guava:guava:32.1.1-jre'
 
+    // p6spy
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
