--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: "3"
 services:
   database:
     image: mysql:8.0.33
-    container_name: mysql_container
+    container_name: database
     restart: always
     ports:
-      - "3306:3306"
+      - "13306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: "1234"
       MYSQL_DATABASE: "study_with_me"
