--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,6 +5,13 @@ spring:
     username: ${RDS_USERNAME}
     password: ${RDS_PASSWORD}
 
+  flyway:
+    enabled: true
+    encoding: UTF-8
+    baseline-on-migrate: true
+    baseline-version: 1
+    locations: classpath:db/migration
+
   jpa:
     open-in-view: false
     hibernate:
