--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         show_sql: false
-        format_sql: true
+        format_sql: false
         highlight_sql: true
         default_batch_fetch_size: 50
 
@@ -68,7 +68,9 @@ logging:
   level:
     org.springframework.core:
       LocalVariableTableParameterNameDiscoverer: error
-    org.hibernate:
-      SQL: DEBUG
-      type.descriptor.sql: TRACE
-      orm.jdbc.bind: TRACE
+
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: true
+      log-format:
