--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -23,6 +23,11 @@ spring:
         highlight_sql: true
         default_batch_fetch_size: 50
 
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+
   thymeleaf:
     cache: false
 
