--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,6 +11,11 @@ spring:
         highlight_sql: true
         default_batch_fetch_size: 50
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
   thymeleaf:
     cache: false
 
