--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,10 +7,6 @@ spring:
 
   flyway:
     enabled: false
-    encoding: UTF-8
-    baseline-on-migrate: true
-    baseline-version: 1
-    locations: classpath:db/migration
 
   jpa:
     open-in-view: false
@@ -22,6 +18,11 @@ spring:
         format_sql: false
         highlight_sql: true
         default_batch_fetch_size: 50
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
   thymeleaf:
     cache: false
