--- a/build.gradle
+++ b/build.gradle
@@ -5,17 +5,17 @@ buildscript {
 }
 
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.1.1'
-    id 'io.spring.dependency-management' version '1.1.0'
+    id "java"
+    id "org.springframework.boot" version "3.1.1"
+    id "io.spring.dependency-management" version "1.1.0"
     id "org.asciidoctor.jvm.convert" version "3.3.2"
 }
 
-group = 'com.kgu'
-version = '0.0.1-SNAPSHOT'
+group = "com.kgu"
+version = "0.0.1-SNAPSHOT"
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = "17"
 }
 
 configurations {
@@ -30,85 +30,86 @@ repositories {
 }
 
 ext {
-    set('snippetsDir', file("build/generated-snippets"))
+    set("snippetsDir", file("build/generated-snippets"))
 }
 
 dependencies {
     // Spring Web
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-validation"
+    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
 
     // JPA & DB
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    runtimeOnly "com.mysql:mysql-connector-j"
 
     // Flyway
-    implementation 'org.flywaydb:flyway-core'
-    implementation 'org.flywaydb:flyway-mysql'
+    implementation "org.flywaydb:flyway-core"
+    implementation "org.flywaydb:flyway-mysql"
 
     // Querydsl
-    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
-    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
-    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     // Mail
-    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation "org.springframework.boot:spring-boot-starter-mail"
 
-    // Amazon S3 (NCP Object Storage)
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.450'
+    // AWS
+    implementation "io.awspring.cloud:spring-cloud-aws-starter:3.0.1"
+    implementation "io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.1"
 
     // Redis
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation "org.springframework.boot:spring-boot-starter-data-redis"
 
     // JWT
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation "io.jsonwebtoken:jjwt-api:0.11.5"
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"
 
     // Swagger
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0"
 
     // Lombok
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    testCompileOnly 'org.projectlombok:lombok'
-    testAnnotationProcessor 'org.projectlombok:lombok'
+    compileOnly "org.projectlombok:lombok"
+    annotationProcessor "org.projectlombok:lombok"
+    testCompileOnly "org.projectlombok:lombok"
+    testAnnotationProcessor "org.projectlombok:lombok"
 
     // Slack API
-    implementation 'com.slack.api:slack-api-client:1.29.2'
+    implementation "com.slack.api:slack-api-client:1.29.2"
 
     // Guava
-    implementation 'com.google.guava:guava:32.1.1-jre'
+    implementation "com.google.guava:guava:32.1.1-jre"
 
     // p6spy
-    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+    implementation "com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0"
 
     // Test
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation "org.springframework.boot:spring-boot-starter-test"
 
     // Spring REST Docs (With MockMvc)
-    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
-    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+    asciidoctorExt "org.springframework.restdocs:spring-restdocs-asciidoctor"
+    testImplementation "org.springframework.restdocs:spring-restdocs-mockmvc"
 
     // RestAssured (E2E Test)
-    testImplementation 'io.rest-assured:rest-assured:5.3.1'
+    testImplementation "io.rest-assured:rest-assured:5.3.1"
 
     // TestContainers
-    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
-    testImplementation 'org.testcontainers:junit-jupiter'
-    testImplementation 'org.testcontainers:mysql:1.18.3'
-    testImplementation 'org.flywaydb.flyway-test-extensions:flyway-spring-test:9.5.0'
+    testImplementation "org.springframework.boot:spring-boot-testcontainers"
+    testImplementation "org.testcontainers:junit-jupiter"
+    testImplementation "org.testcontainers:mysql:1.18.3"
+    testImplementation "org.flywaydb.flyway-test-extensions:flyway-spring-test:9.5.0"
 }
 
-tasks.named('test') {
+tasks.named("test") {
     outputs.dir snippetsDir
     useJUnitPlatform()
 }
 
 // QueryDsl QClass Generated Position
-def qTypeGeneratedPosition = 'src/main/generated'
+def qTypeGeneratedPosition = "src/main/generated"
 
 tasks.withType(JavaCompile).configureEach {
     options.getGeneratedSourceOutputDirectory().set(file(qTypeGeneratedPosition))
@@ -127,13 +128,13 @@ clean {
 // REST Docs
 asciidoctor {
     inputs.dir snippetsDir
-    configurations 'asciidoctorExt'
+    configurations "asciidoctorExt"
     dependsOn test
     baseDirFollowsSourceFile()
 }
 
 asciidoctor.doFirst {
-    delete file('src/main/resources/static/docs/*')
+    delete file("src/main/resources/static/docs/*")
 }
 
 bootJar {
@@ -149,7 +150,7 @@ bootJar {
         into file("build/resources/main/static")
     }
 
-    archivesBaseName = 'StudyWithMe'
-    archiveFileName = 'StudyWithMe.jar'
+    archivesBaseName = "StudyWithMe"
+    archiveFileName = "StudyWithMe.jar"
     archiveVersion = "0.0.1"
 }
