chore: logback 재설정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,6 +2,7 @@ spring:
   config:
     import:
       - aws-parameterstore:/study-with-me/secret_prod/
+      - settings/application-logging.yml
       - settings/application-data.yml
       - settings/application-external.yml
       - settings/application-mail.yml
@@ -18,7 +19,7 @@ spring:
     enabled: true
     encoding: UTF-8
     baseline-on-migrate: true
-    baseline-version: 1
+    baseline-version: 20230726
     locations: classpath:db/migration
 
   data:
