move: Docker 관련 파일 root로 이동

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       - --collation-server=utf8mb4_unicode_ci
       - --skip-character-set-client-handshake
     volumes:
-      - "./mysql_data:/var/lib/mysql" # .idb = Table Data / .frm = Table Definition / ...
-      - "../src/main/resources/sql/init.sql:/docker-entrypoint-initdb.d/init.sql:ro" # Init Script
+      - "./docker/mysql_data:/var/lib/mysql" # .idb = Table Data / .frm = Table Definition / ...
+      - "./src/main/resources/sql/init.sql:/docker-entrypoint-initdb.d/init.sql:ro" # Init Script
 
   redis: # redis-cli
     image: redis:latest
@@ -25,4 +25,4 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - "./redis_data/data:/data"
+      - "./docker/redis_data/data:/data"
