--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Docker Image를 빌드한 후 Docker Hub에 Push한다
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/study-with-me-be:latest -f ./docker/Dockerfile .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/study-with-me-be:latest .
           docker images
           docker push ${{ secrets.DOCKER_USERNAME }}/study-with-me-be:latest
 
@@ -62,4 +62,4 @@ jobs:
             docker rm -f $(docker ps -qa)
             docker rmi ${{ secrets.DOCKER_USERNAME }}/study-with-me-be:latest
             docker pull ${{ secrets.DOCKER_USERNAME }}/study-with-me-be:latest
-            docker-compose up -d
+            docker-compose -f docker-compose-prod.yml up -d
