--- a/build.gradle
+++ b/build.gradle
@@ -106,11 +106,6 @@ dependencies {
     testImplementation "org.flywaydb.flyway-test-extensions:flyway-spring-test:9.5.0"
 }
 
-tasks.named("test") {
-    outputs.dir snippetsDir
-    useJUnitPlatform()
-}
-
 // QueryDsl QClass Generated Position
 def qTypeGeneratedPosition = "src/main/generated"
 
@@ -128,31 +123,38 @@ clean {
     delete file(qTypeGeneratedPosition)
 }
 
+tasks.named("test") {
+    useJUnitPlatform()
+    outputs.dir snippetsDir
+}
+
 // REST Docs
 asciidoctor {
-    inputs.dir snippetsDir
     configurations "asciidoctorExt"
-    dependsOn test
     baseDirFollowsSourceFile()
+    inputs.dir snippetsDir
+    dependsOn test
 }
 
 asciidoctor.doFirst {
     delete file("src/main/resources/static/docs/*")
 }
 
-bootJar {
+tasks.register("copyDocument", Copy) {
     dependsOn asciidoctor
+    from file("build/docs/asciidoc")
+    into file("src/main/resources/static/docs")
+}
 
-    copy {
-        from "${asciidoctor.outputDir}"
-        into file("src/main/resources/static/docs")
-    }
+build {
+    dependsOn copyDocument
+}
 
-    copy {
-        from file("src/main/resources/static")
-        into file("build/resources/main/static")
-    }
+jar {
+    enabled = false
+}
 
+bootJar {
     archivesBaseName = "StudyWithMe"
     archiveFileName = "StudyWithMe.jar"
     archiveVersion = "0.0.1"
