--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+env:
+  IMAGE_NAME: study-with-me-be
+  TAG: latest
+
 jobs:
   build:
     name: Build & Deploy
@@ -41,12 +45,17 @@ jobs:
       - name: Gradle build를 수행한다
         run: ./gradlew bootJar
 
-      - name: Docker Image를 빌드한 후 Docker Hub에 Push한다
+      - name: Docker Hub에 로그인을 진행한다
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Docker Hub에 Docker Image를 Push한다
         run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/study-with-me-be:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.TAG }} .
           docker images
-          docker push ${{ secrets.DOCKER_USERNAME }}/study-with-me-be:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
 
       - name: docker-compose-prod.yml을 EC2에 전송한다
         uses: appleboy/scp-action@master
@@ -54,7 +63,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: ".docker-compose-prod.yml"
+          source: "./docker-compose-prod.yml"
           target: "/home/ec2-user/Study-With-Me-Backend"
 
       - name: EC2 WAS 서버에 접속 후 Docker Image를 Pull하고 docker-compose를 실행한다
@@ -66,6 +75,6 @@ jobs:
           script: |
             cd /home/ec2-user/Study-With-Me-Backend
             sudo docker rm -f $(sudo docker ps -qa)
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/study-with-me-be:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
             sudo docker-compose -f docker-compose-prod.yml up -d
             sudo docker image prune -f
