chore: Swagger 기본 경로 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ jwt:
 
 springdoc:
   swagger-ui:
-    path: /swagger-ui.html
+    path: /swagger
     display-request-duration: true
     operations-sorter: alpha
     tags-sorter: alpha
