--- a/src/main/resources/settings/application-oauth.yml
+++ b/src/main/resources/settings/application-oauth.yml
@@ -3,8 +3,16 @@ oauth2:
     grant-type: authorization_code
     client-id: ${OAUTH_GOOGLE_CLIENT_ID}
     client-secret: ${OAUTH_GOOGLE_CLIENT_SECRET}
-    redirect-url: ${OAUTH_GOOGLE_REDIRECT_URL}
-    scope: openid, profile
+    redirect-uri: ${OAUTH_GOOGLE_REDIRECT_URL}
+    scope: openid, profile, email
     auth-url: https://accounts.google.com/o/oauth2/v2/auth
     token-url: https://www.googleapis.com/oauth2/v4/token
     user-info-url: https://www.googleapis.com/oauth2/v3/userinfo
+  naver:
+    grant-type: authorization_code
+    client-id: ${OAUTH_NAVER_CLIENT_ID}
+    client-secret: ${OAUTH_NAVER_CLIENT_SECRET}
+    redirect-uri: ${OAUTH_NAVER_REDIRECT_URL}
+    auth-url: https://nid.naver.com/oauth2.0/authorize
+    token-url: https://nid.naver.com/oauth2.0/token
+    user-info-url: https://openapi.naver.com/v1/nid/me
