--- a/src/main/resources/settings/application-oauth.yml
+++ b/src/main/resources/settings/application-oauth.yml
@@ -16,3 +16,12 @@ oauth2:
     auth-url: https://nid.naver.com/oauth2.0/authorize
     token-url: https://nid.naver.com/oauth2.0/token
     user-info-url: https://openapi.naver.com/v1/nid/me
+  kakao:
+    grant-type: authorization_code
+    client-id: ${OAUTH_KAKAO_CLIENT_ID}
+    client-secret: ${OAUTH_KAKAO_CLIENT_SECRET}
+    redirect-uri: ${OAUTH_KAKAO_REDIRECT_URL}
+    scope: profile_nickname, profile_image, account_email
+    auth-url: https://kauth.kakao.com/oauth/authorize
+    token-url: https://kauth.kakao.com/oauth/token
+    user-info-url: https://kapi.kakao.com/v2/user/me
