--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -72,6 +72,7 @@ oauth2:
     client-id: client_id
     client-secret: client_secret
     redirect-uri: http://localhost:3000/login
+    scope: profile_nickname, profile_image, account_email
     auth-url: https://kauth.kakao.com/oauth/authorize
     token-url: https://kauth.kakao.com/oauth/token
     user-info-url: https://kapi.kakao.com/v2/user/me
