--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -19,7 +19,7 @@ spring:
     enabled: true
     encoding: UTF-8
     baseline-on-migrate: true
-    baseline-version: 20230726
+    baseline-version: 1
     locations: classpath:db/migration
 
   data:
