--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  app:
+  application:
     build:
       context: .
       dockerfile: Dockerfile
@@ -10,3 +10,25 @@ services:
       - "8080"
     ports:
       - "8080:8080"
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    restart: always
+    ports:
+      - "9090:9090"
+    volumes:
+      - "./prometheus-prod.yml:/etc/prometheus/prometheus.yml"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    restart: always
+    user: "$UID:$GID"
+    ports:
+      - "3000:3000"
+    volumes:
+      - "./monitoring/grafana_data:/var/lib/grafana"
+    depends_on:
+      - prometheus
+    privileged: true
