refactor: S3 Upload 객체에 대해서 CloudFront로 Access하도록 Url 제공

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -25,6 +25,8 @@ spring:
         secret-key: secret-key
       s3:
         bucket: s3-bucket
+      cloudfront:
+        url: https://cloudfront-domain
 
   thymeleaf:
     cache: false
