[feat] Prometheus + Grafana를 활용한 모니터링 시스템 구축 및 S3 Access에 대한 부분을 CloudFront로 수정한다 (#15)
* chore: 모니터링을 위한 Actuator + Micrometer 의존성 추가 (Prometheus + Grafana & Pinpoint)

* chore: actuator(with tomcat) + prometheus 관련 설정

* chore: prometheus.yml 설정, monitoring(prometheus + grafana) 관련 docker-compose 구축

* chore: 배포 시 Prod 전용 prometheus.yml 설정 및 파이프라인 구조 수정

* fix: DummyToken Expires 오류 수정

* refactor: S3 Bucket 디렉토리 네이밍 수정

* refactor: S3 Upload 객체에 대해서 CloudFront로 Access하도록 Url 제공

* refactor: 이메일 관련 타임리프 템플릿 이미지 S3 Url -> CloudFront CDN Url로 수정

* chore: prod 환경 actuator 포트설정 제거

* refactor: Attachment, Assignment Upload facade -> service, SubmitApiControllerTest 모킹 오류 수정

* docs: README 업데이트

--- a/docker-compose-monitoring.yml
+++ b/docker-compose-monitoring.yml
@@ -1,16 +1,5 @@
 version: "3"
 services:
-  application:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: application
-    image: sjiwon/study-with-me-be:latest
-    expose:
-      - "8080"
-    ports:
-      - "8080:8080"
-
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
@@ -18,7 +7,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - "./prometheus-prod.yml:/etc/prometheus/prometheus.yml"
+      - "./docker/monitoring/prometheus.yml:/etc/prometheus/prometheus.yml"
 
   grafana:
     image: grafana/grafana:latest
@@ -28,7 +17,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - "./monitoring/grafana_data:/var/lib/grafana"
+      - "./docker/monitoring/grafana_data:/var/lib/grafana"
     depends_on:
       - prometheus
     privileged: true
