--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -10,6 +10,8 @@ services:
       - "8080"
     ports:
       - "8080:8080"
+    volumes:
+      - "./logs:/logs"
 
   prometheus:
     image: prom/prometheus:latest
@@ -32,3 +34,18 @@ services:
     depends_on:
       - prometheus
     privileged: true
+
+  promtail:
+    image: grafana/promtail:latest
+    container_name: promtail
+    volumes:
+      - "./logs:/logs"
+      - "./promtail-prod.yml:/etc/promtail/config.yml"
+    command: -config.file=/etc/promtail/config.yml
+
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
