--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -27,6 +27,9 @@ spring:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
 
+cors:
+  allowed-origin-patterns: ${CORS_PRODUCTION_DOMAIN}
+
 server:
   tomcat:
     mbeanregistry:
