--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,9 @@ spring:
       host: localhost
       port: 6379
 
+cors:
+  allowed-origin-patterns: http://localhost:8080
+
 server:
   tomcat:
     mbeanregistry:
