--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation "io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.1"
     implementation "io.awspring.cloud:spring-cloud-aws-starter-ses:3.0.1"
     implementation "io.awspring.cloud:spring-cloud-aws-starter-parameter-store:3.0.1"
+    implementation "ca.pjer:logback-awslogs-appender:1.6.0" // CloudWatch Logging with Logback
 
     // Redis
     implementation "org.springframework.boot:spring-boot-starter-data-redis"
