--- a/src/main/resources/settings/application-logging.yml
+++ b/src/main/resources/settings/application-logging.yml
@@ -1,3 +1,7 @@
+slack:
+  webhook:
+    url: ${SLACK_WEBHOOK_URL}
+
 logging.config: classpath:logback/logback-local.xml
 ---
 spring.config.activate.on-profile: prod
