fix: 모든 컨테이너가 내려가는 오류 수정
- Spring Application Container만 필터링해서 삭제 후 up -d

--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -63,7 +63,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: "./docker/docker-compose-prod.yml"
+          source: "./docker-compose-prod.yml"
           target: "/home/ec2-user/Study-With-Me-Backend"
 
       - name: EC2 WAS 서버에 접속 후 Docker Image를 Pull하고 docker-compose를 실행한다
@@ -74,7 +74,8 @@ jobs:
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
             cd /home/ec2-user/Study-With-Me-Backend
-            sudo docker rm -f $(sudo docker ps -qa)
+            sudo docker rm -f $(docker ps -aq --filter ancestor=${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.TAG }})
+            sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
             sudo docker-compose -f docker-compose-prod.yml up -d
             sudo docker image prune -f
