chore: docker-compose volume path 수정

--- a/docker/docker-compose-rdb-prod.yml
+++ b/docker/docker-compose-rdb-prod.yml
@@ -16,4 +16,4 @@ services:
       - --collation-server=utf8mb4_unicode_ci
       - --skip-character-set-client-handshake
     volumes:
-      - "./docker/mysql_data:/var/lib/mysql" # .idb = Table Data / .frm = Table Definition / ...
+      - "./docker-volume-data/mysql_data:/var/lib/mysql" # .idb = Table Data / .frm = Table Definition / ...
