--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - "./docker/monitoring/prometheus.yml:/etc/prometheus/prometheus.yml"
+      - "./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml"
 
   grafana:
     image: grafana/grafana:latest
@@ -17,7 +17,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - "./docker/monitoring/grafana_data:/var/lib/grafana"
+      - "./monitoring/grafana_data:/var/lib/grafana"
     depends_on:
       - prometheus
     privileged: true
