chore: submodule에 대한 compileCopy gradle task 추가

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ bin/
 ### IntelliJ IDEA ###
 **/src/main/generated/
 **/src/main/resources/security/
+**/src/main/resources/application-prod.yml
 .idea
 *.iws
 *.iml
