--- a/build.gradle
+++ b/build.gradle
@@ -150,6 +150,18 @@ tasks.register("copyDocument", Copy) {
     into file("src/main/resources/static/docs")
 }
 
+tasks.named('compileJava') {
+    inputs.files(tasks.named('processResources'))
+}
+
+processResources.dependsOn('copySecret')
+
+tasks.register('copySecret', Copy) {
+    from './study-with-me-secret'
+    include 'application*.yml'
+    into './src/main/resources'
+}
+
 build {
     dependsOn copyDocument
 }
