--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -6,19 +6,30 @@ on:
       - main
 
 env:
-  IMAGE_NAME: study-with-me-be
-  TAG: latest
+  SUBMODULE_TOKEN: ${{ secrets.SUBMODULE_TOKEN }}
+  AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+  AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+  AWS_REGION: ${{ secrets.AWS_REGION }}
+  ZIP_FILE: spring-build-${{ github.run_number }}.zip
+  S3_BUCKET: ${{ secrets.S3_BUCKET }}
+  S3_DEPLOY_RESOURCE_FOLDER: ${{ secrets.S3_DEPLOY_RESOURCE_FOLDER }}
+  AWS_DEPLOY_APP_NAME: ${{ secrets.AWS_DEPLOY_APP_NAME }}
+  AWS_DEPLOY_GROUP: ${{ secrets.AWS_DEPLOY_GROUP }}
+  AWS_DEPLOY_CONFIG: ${{ secrets.AWS_DEPLOY_CONFIG }}
 
 jobs:
-  Build-Deploy:
+  build-and-deploy:
     name: Build & Deploy
     runs-on: ubuntu-latest
 
     steps:
       - name: Repository를 가져온다
         uses: actions/checkout@v3
+        with:
+          token: ${{ env.SUBMODULE_TOKEN }}
+          submodules: true
 
-      - name: JDK 17을 설치한다
+      - name: JDK 17을 설정한다
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
@@ -45,37 +56,33 @@ jobs:
       - name: Gradle build를 수행한다
         run: ./gradlew bootJar
 
-      - name: Docker Hub에 로그인을 진행한다
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Docker Hub에 Docker Image를 Push한다
+      - name: S3에 보낼 Resource Zip File을 생성한다
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.TAG }} .
-          docker images
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
+          mkdir -p deploy
+          cp ./appspec.yml ./deploy/
+          cp ./Dockerfile ./deploy/
+          cp ./scripts/*.sh ./deploy/
+          cp ./build/libs/*.jar ./deploy/
+          zip -r -qq -j ./spring-build-${{ github.run_number }}.zip ./deploy
 
-      - name: docker-compose-prod.yml을 EC2에 전송한다
-        uses: appleboy/scp-action@master
+      - name: AWS 인증을 진행한다
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: "./docker-compose-prod.yml"
-          target: "/home/ec2-user/Study-With-Me-Backend"
+          aws-access-key-id: ${{ env.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ env.AWS_SECRET_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
-      - name: EC2 WAS 서버에 접속 후 Docker Image를 Pull하고 docker-compose를 실행한다
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_PRIVATE_KEY }}
-          script: |
-            cd /home/ec2-user/Study-With-Me-Backend
-            sudo docker rm -f $(docker ps -aq --filter ancestor=${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.TAG }})
-            sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
-            sudo docker-compose -f docker-compose-prod.yml up -d
-            sudo docker image prune -f
+      - name: Resource Zip File을 S3로 전송한다
+        run: |
+          aws s3 cp \
+            --region ${{ env.AWS_REGION }} \
+            ./${{ env.ZIP_FILE }} s3://${{ env.S3_BUCKET }}/${{ env.S3_DEPLOY_RESOURCE_FOLDER }}/${{ env.ZIP_FILE }}
+
+      - name: AWS CodeDeploy를 통한 배포를 진행한다
+        id: deploy
+        run: |
+          aws deploy create-deployment \
+            --application-name ${{ env.AWS_DEPLOY_APP_NAME }} \
+            --deployment-group-name ${{ env.AWS_DEPLOY_GROUP }}  \
+            --deployment-config-name ${{ env.AWS_DEPLOY_CONFIG }} \
+            --s3-location bucket=${{ env.S3_BUCKET }},bundleType=zip,key=${{ env.S3_DEPLOY_RESOURCE_FOLDER }}/${{ env.ZIP_FILE }}
