refactor: 응답 dto Jackson 직렬화 관련 기본 생성자 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -122,3 +122,6 @@ slack:
 
 logging:
   config: classpath:logback/logback-local.xml
+  level:
+    org.springframework.core:
+      LocalVariableTableParameterNameDiscoverer: error
