test: RedisTestContainers 적용

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -15,7 +15,10 @@ spring:
     redis:
       host: localhost
       port: 6379
-      password: studywithme
+      password:
+
+  cache:
+    type: redis
 
   cloud:
     aws:
