[feat] DB I/O 및 응답 속도 개선을 위한 캐싱을 적용한다 (#28)
* chore: Spring Cache, Redis 의존성 추가

* feat: RedisConfiguration

* move: global/config 디렉토리 세분화

* chore: 스키마 수정

* feat: 캐싱 관련 Redis 설정 클래스 추가, 로깅 JsonNode -> Object

* feat: 스터디 조건 조회 `@Cacheable` 캐싱 적용

* nit: CacheManager duration 수정

* refactor: 토큰 재발급 API AccessToken 바인딩 제거

* refactor: 응답 dto Jackson 직렬화 관련 기본 생성자 추가

* feat: 사용자 Private 기본 정보 캐싱 적용

* chore: 배포 관련 GitHub Actions Pipeline, Dockerfile, script 파일 수정

* chore: update submodule

* refactor: AuthorizationExtractor method rename, extractRefreshToken 추가

* feat: 인증된 사용자 관련 `@Auth + ArgumentResolver` 구현 및 리팩토링

* test: RedisTestContainers 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,15 @@ spring:
   flyway:
     enabled: false
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password: studywithme
+
+  cache:
+    type: redis
+
   cloud:
     aws:
       region:
@@ -113,3 +122,6 @@ slack:
 
 logging:
   config: classpath:logback/logback-local.xml
+  level:
+    org.springframework.core:
+      LocalVariableTableParameterNameDiscoverer: error
