--- a/docker/docker-compose-persistence.yml
+++ b/docker/docker-compose-persistence.yml
@@ -26,3 +26,4 @@ services:
       - "6379:6379"
     volumes:
       - "./redis_data/data:/data"
+    command: redis-server --requirepass studywithme --port 6379
