refactor: 메인페이지 스터디 조회 SliceResponse limit(size + 1) 기반 hasNext 판단 로직 적용

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -3,8 +3,8 @@ name: Backend CI
 on:
   pull_request:
     branches:
-      - main
-      - develop
+      - main-x
+      - develop-x
     types:
       - opened
       - synchronize
