--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -3,7 +3,7 @@ name: Backend CD
 on:
   push:
     branches:
-      - main
+      - main-x
 
 env:
   SUBMODULE_TOKEN: ${{ secrets.SUBMODULE_TOKEN }}
